[package]
name = "livetunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
confy = "0.5.1"
futures = "0.3.25"
inquire = "0.5.2"
openssh = "0.9.8"
serde = { version = "1.0.147", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
