[package]
name = "livetunnel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.23", features = ["derive"] }
confy = "0.5.1"
ctrlc = "3.2.3"
indicatif = "0.17.2"
inquire = { version = "0.5.2", features = ["editor"] }
openssh = "0.9.8"
serde = { version = "1.0.147", features = ["derive"] }
sha2 = "0.10.6"
tokio = { version = "1", features = ["rt-multi-thread"] }
